[package]
name = "local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama_cpp_rs = { git = "https://github.com/mdrokz/rust-llama.cpp", version = "0.3.0", features = [
    "metal",
] }
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
tokio = { version = "1.13.0", features = ["full"] }
downloader = "0.2.7"

[build-dependencies]
cc = "1.0.83"
